FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20180630:
AUTHOR: kde@FreeBSD.org

  bsd.qt.mk has been replaced by qt.mk. This changes the way ports have to
  depend on Qt slightly.

  Previously one would have written
  	USE_QT4=foo bar
  or
  	USE_QT5=foo bar
  while now one has to write
  	USES=qt:4
  	USE_QT=foo bar
  respectively
  	USES=qt:5
  	USE_QT=foo bar

  Further qmake.mk no longer respects QT_NONSTANDARD. Ports that don't want to
  get the configure environment provided by qmake.mk should add the argument
  no_env, ports that don't want the configure target should specify no_configure.

20180506:
AUTHOR: brnrd@FreeBSD.org

  All USE_ and WANT_ variables for PHP have been removed and marked
  UNSUPPORTED. Use USES= php:<feature> as a replacement.

  USE_PHPIZE, USE_PHPEXT, USE_ZENDEXT, USE_PHP_BUILD,
  WANT_PHP_CLI, WANT_PHP_CGI, WANT_PHP_MOD, WANT_PHP_WEB, WANT_PHP_EMB

20180311:
AUTHOR: brnrd@FreeBSD.org

  USE_APACHE has been replaced by USES=apache.

20180308:
AUTHOR: mat@FreeBSD.org

  Ports using USES=php:phpize, php:ext, php:zend, and php:pecl are now
  flavored.  They will automatically get flavors (php56, php70, php71, php72)
  depending of the versions they support (set with IGNORE_WITH_PHP).  As a
  consequence, ports using USES=pear and USES=horde are also flavored.

  As all packages must have different package names, the following variables
  must be used in PKGNAMEPREFIX/SUFFIX:

    Variable                     + Values                +
    --------------------------------------------------------------------------------------
    PHP_PKGNAMEPREFIX            | php56- php72-         | PHP Extensions