@@ -10624,3 +10624,5 @@ science/mei|science/code_saturne|2018-11-04|Code_Saturne merged bft, ecs, fvm, m
 x11-wm/cde|x11/cde|2018-11-03|Recategorise
 misc/rumprun||2018-11-06|Has expired: "fails with current compilers"
 security/ossec-hids-client|security/ossec-hids-agent|2018-10-29|Agent is the name used in documentation
+graphics/ImageMagick|graphics/ImageMagick6|2018-11-10|Port renamed
+lang/gcc6-devel|lang/gcc6|2018-11-11|The GCC 6 branch has been closed, use the final release instead (or a later major version)
